<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="pref_treenotes_about">About</string>
    <string name="pref_treenotes_version">Version</string>
    <string name="app_name">TreeNotes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_done">Save</string>
    <string name="menu_add_samelevel">Add at same level&#8230;</string>
    <string name="menu_add_nextlevel">Add at next level&#8230;</string>
    <string name="menu_cut">Cut</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_paste">Paste&#8230;</string>
    <string name="menu_edit_note_heading">Edit note name</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_move_up">Move up</string>
    <string name="menu_move_down">Move down</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_hide_unhide">Hide/Unhide&#8230;</string>
    <string name="menu_add_shortcut">Create shortcut</string>
    <string name="radio_text_note">Plain text note</string>
    <string name="radio_photo_note">Photo note</string>
    <string name="radio_video_note">Video note</string>
    <string name="radio_url_note">Web note</string>
    <string name="menu_accept">Accept</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_save">Save</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_clear_all">Clear all data</string>
    <!-- floating menu of activity which annotates images -->
    <string name="menu_add_shape">Add&#8230;</string>
    <string name="menu_add_arrow">Arrow</string>
    <string name="menu_add_numbered_arrow">Numbered Arrow</string>
    <string name="menu_add_rectangle">Rectangle</string>
    <string name="menu_selected_delete">Delete</string>
    <string name="menu_selected_attributes">Change Style</string>
    <string name="menu_selected_annotate">Edit Text</string>
    <string name="menu_checklist">Checklist&#8230;</string>
    <string name="menu_search">Search</string>
    <string name="dlg_description_empty">The description is empty. Please enter a description.</string>
    <string name="dlg_error_loading_resource">Loading failed.</string>
    <string name="dlg_error_file_not_found">File not found</string>
    <string name="dlg_image_empty">Please select an image.</string>
    <string name="dlg_video_empty">Please select a video.</string>
    <string name="dlg_are_you_sure_about_delete">Are you sure you want to delete the item?</string>
    <string name="dlg_ok">OK</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="dlg_are_you_sure_you_want_to_backup">Are you sure you want to backup?</string>
    <string name="dlg_are_you_sure_you_want_to_restore">Are you sure you want to restore?</string>
    <string name="dlg_unsafed_changes">All changes will be discarded.\nAre you sure you want to cancel?</string>
    <string name="unregistered_username">Unregistered user</string>

    <!-- Label for Description TextView in AddNewOrEdit activity -->
    <string name="description_label">Description</string>
    <string name="thumbnail_content_description">Photo Video Preview</string>
    <string name="preview_content_description">Photo Video Thumbnail</string>
    <string name="folder_content_description">showing collapsed/expanded tree</string>
    <string name="annotate_content_description">holds annotated image</string>
    <string name="web_browser_content_description">Select Page</string>
    <string name="button_content_linestyle">lets user select a linestyle</string>
    <string name="video_not_supported">Remote videos are not supported</string>
    <!-- Strings associated with ActivityEditAnnotationImage and children -->
    <string name="image_button_linestyle">Currently selected linestyle</string>
    <string name="image_button_colour">Currently selected colour</string>
    <string name="compress_file_size_label">File Size: </string>
    <string name="compress_file_size_value_default">--.-- --</string>
    <string name="compress_rate_label">Compression: </string>
    <string name="compress_rate_value_default">--- %</string>

    <!-- Selection -->
    <string name="select_line_width_in_dp">2dp</string>

    <!-- Backup/Restore -->
    <string name="new_file_prompt">New backup</string>
    <string name="backup_filename">backup_file</string>
    <string name="test">Test</string>

    <color name="notepad_paper">#EEF8E0A0</color>
    <color name="white_background">#FFFFFF</color>
    <color name="grey_background">#dddddd</color>
    <color name="black_background">#000000</color>
    <color name="annotation_colour">#1932cc</color>

    <!--
         Color used to draw selected overlay shapes while
    	 annotating images (rubberband)
    -->
    <color name="color_rubberband">#FA7603</color>
    <!--
         The below value defines the default line width of annotation shapes.
    	 A value of 100 means that the initial line width is 1/100 of the 
    	 image width in pixels. Must be > 0 even though small values 
    	 make no sense
    -->
    <integer name="line_width_divisor">100</integer>
    <integer name="newitems_indicator_view_width_dp">4</integer>
    <string name="newitems_indicator_view_width_dp">4dp</string>
    

    <!-- Selection -->
    <color name="select_outline_color_explorer">#ffcc33</color>
    <color name="select_outline_color_notes">#99cc99</color>
    <color name="select_fill_color">#FFFFFF</color>
    <color name="unselect_fill_color">#C8C8C8</color>

    
    <integer name="text_size">20</integer>
    <integer name="max_description_length_before_trunc">255</integer>
    <integer name="select_line_width_in_dp">2</integer>

    <color name="red">#ff0000</color>

    <string name="title_activity_add_new_or_edit">AddNewOrEdit</string>
    <string name="title_activity_annotate_image">Annotate</string>
    <string name="title_activity_startup_settings">Settings</string>
    <string name="title_activity_edit_text_annotation">Edit Annotation Text</string>
    <string name="title_activity_edit_image_annotation">Edit Image</string>
    <string name="layout_linewidth_default_label">0</string>
    <string name="layout_linewidth_label">Line Width</string>
    <string name="layout_linewidth_content_description">Line Width</string>
    <string name="layout_linestyle_label">Line Style</string>
    <string name="layout_linestyle_content_description">Line Style</string>
    <string name="layout_linecolor_label">Line Color</string>
    <string name="layout_linecolor_content_description">Line Color</string>
    <string name="button_overlay_attributes_label">Overlay Attributes</string>
    <string name="menu_annotate">Annotate</string>
    <string name="button_action_delete">Delete</string>
    
    <integer name="indent_amount_max">10</integer>
    <integer name="indent_width_min_dp">10</integer>
   
    <string name="treenotes_default_user_indent_tab_width_summary_base">Indentation width in dp</string>
    

    <!-- Folder and file names -->
    <string name="treenodes_dirname">treenotes</string>
    <string name="working_file_name">current</string>
    <string name="explorer_file_extention">.treenotes</string>
    <string name="note_file_extention">.treenote</string>

    <string-array name="types">
        <item>Type 1</item>
        <item>Type 2</item>
        <item>Type 3</item>
    </string-array>
    <string-array name="types_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="title_activity_explorer_startup_activity">TreeNotes Explorer</string>
    <string name="settings_activity">Settings</string>
    <string name="note_startup_activity_name">Notes Editor</string>
    <string name="explorer_activity_name">TreeNotes Explorer</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_fileexplorer">File Explorer</string>
    <string name="title_activity_activity_search_users_for_groups">Search users for Groups</string>
    <string name="search_hint">Search for new members</string>
    <string name="title_activity_group_members">Group Members</string>
    <string name="title_activity_activity_all_members">All Members</string>
    <string name="title_activity_activity_annotator">Annotator</string>
    <string name="title_activity_activity_publications">Publications</string>
    <string name="title_activity_activity_subscriptions">Subscriptions</string>
    <string name="title_activity_activity_subscription_search">Subscription search</string>
    <string name="title_activity_activity_view_image">ActivityViewImage</string>
    <string name="title_activity_activity_web_browser">Select Page</string>
    <string name="title_activity_facebook_export">Export to Facebook</string>
    <string name="title_activity_add_new_or_edit">Note</string>
    
    <!-- Messaging URLs -->
    <string name="url_register_user">"/api/TreeManager/LoginUser"</string>
    <string name="url_note_sync">"/api/TreeManager/SyncNote"</string>
    <string name="url_explorer_sync">"/api/TreeManager/SyncExplorer"</string>
    <string name="url_members_sync">"/api/TreeManager/SyncMembers"</string>
    <string name="url_publications_search">"/api/TreeManager/PublicationsSearch"</string>
    <string name="url_publications_by_author_search">"/api/TreeManager/PublicationsByAuthorSearch"</string>
    <string name="url_subscriptions_search">"/api/TreeManager/SubscriptionsSearch"</string>
    <string name="url_subscriptions_remove">"/api/TreeManager/SubscriptionsRemove"</string>   
    <string name="url_publications_add">"/api/TreeManager/PublicationsAdd"</string>
    <string name="url_publications_remove">"/api/TreeManager/PublicationsRemove"</string>
    <string name="url_subscriptions_add">"/api/TreeManager/SubscriptionsAdd"</string>
    <string name="url_is_server_alive">"/api/TreeManager/IsServerAlive"</string>
    <string name="url_clear_webservice_repository">"/api/TreeManager/ClearRepository"</string>
    <string name="url_upload_image_file">"/api/TreeManager/UploadImageFile"</string>
    <string name="url_download_image_file">"/api/TreeManager/DownloadImageFile"</string>
    <string name="url_upload_webpage_html">"/api/TreeManager/UploadWebPageHtml"</string>
    <string name="url_send_gcm_reg_id">"/api/TreeManager/SendGcmRegistrationId"</string>
    <string name="url_get_note_sharers">"/api/TreeManager/GetNoteSharers"</string>
    <string name="url_set_note_sharers">"/api/TreeManager/SetNoteSharers"</string>
    <string name="url_instruct_uploads_complete">"/api/TreeManager/InstructUploadsComplete"</string>
    
    
    
    

    <string name="add_new_rel_layout_content_descr">Annotate image</string>    
    <string name="add_new_arrow_button_content_descr">Edit arrows</string>
    <string name="add_new_annotate_button_content_descr">Edit annotation</string>
    <string name="add_new_image_preview_content_descr">Image preview</string>
    
    <string name="add_new_use_annotated_text">Use annotated</string>
    <string name="add_new_numbered_arrow_label_text">Numbered arrows:</string>
    <string name="add_new_image_annotation_text">Text</string>
    <!-- my FB account app ID
    <string name="app_id">547707162014596</string> -->
    
    <!-- TreeNote FB account app ID -->
    <string name="app_id">1395468317406813</string>
    
    <!-- Logging -->
    <string name="log_file_developer_email">hrbraasch@gmail.com</string>
    
    
</resources>
